<resources>
    <string name="app_name">wordloom</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="progress_title">Progress</string>
    <string name="library_title">Library</string>
    <string name="home_title">Home</string>
    <string name="selected_dictionaries_title">Selected dictionaries</string>
    <string name="add_button_text">Add more</string>
    <string name="middot_separator">•</string>
    <string name="_words">\ words</string>
    <string name="words_count_text">Words count:</string>
    <string name="total">Total</string>
    <string name="statistics_dicts_title">Your statistics</string>
    <string name="total_words">Total words</string>
    <string name="available_for_repeat">Available for repeat</string>

    <string name="learning">Learning</string>
    <string name="learned">Learned</string>
    <string name="ready_to_learn">Ready to learn</string>
    <string name="unknown">Unknown</string>
    <string name="known">Known</string>

    <string name="add_new">Add new</string>
    <string name="search_in_dictionaries">Search in dictionaries</string>
    <string name="mode_selection">Mode selection</string>
    <string name="start_learning">Start learning</string>
    <string name="session_settings">Session settings</string>
    <string name="learning_mode">Learning mode</string>
    <string name="swipe_mode">Swipe mode</string>
    <string name="word">Word</string>
    <string name="language">Language</string>
    <string name="meaning">Meaning</string>
    <string name="search_for_words">Search for words</string>
    <string name="add_new_meaning">Add new meaning</string>
    <string name="swap_options">Swap options</string>
    <string name="dictionary_name">Dictionary name</string>
    <string name="edit">Edit</string>
    <string name="open_menu">open menu</string>
    <string name="delete_meaning">Delete meaning</string>
    <string name="close_bottom_sheet">close bottom sheet</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="select_dictionary">Select a dictionary</string>
    <string name="add_something">Add something</string>
    <string name="dictionary">Dictionary</string>
    <string name="selected_dictionary">Selected dictionary</string>
    <string name="warning_no_dictionary">You need to create a dictionary first</string>
    <string name="error_empty_field">Field cannot be empty</string>
    <string name="error_already_exists_meaning">This meaning already exists</string>
    <string name="error_no_meanings">You must add at least one meaning</string>
    <string name="error_already_exists_word">This word already exists in the dictionary</string>
    <string name="error_already_exists_dictionary">This dictionary already exists in the library</string>
    <string name="error_empty_languages">Please select both languages</string>
    <string name="error_same_languages">Languages cannot be the same</string>
    <string name="automatically_add_cards">Automatically add cards</string>
    <string name="manage_cards">Manage cards</string>
    <string name="available_words">Available words</string>
    <string name="to_repeat">To repeat</string>
    <string name="to_learn">To learn</string>
    <string name="word_limit_per_session">Word limit per session</string>
    <string name="error_wrong_word_limit">The value must be between 10 and 999</string>
    <string name="word_limit_hint_text">\tThe session will include all cards for review + cards ready for study, but no more than %d</string>
    <string name="swipe_left">Repeat</string>
    <string name="swipe_right">Got it</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_dict_deletion_title">Delete dictionary?</string>
    <string name="confirm_dict_deletion_message">This action will delete the dictionary and all associated cards. It cannot be undone.</string>
    <string name="select_dictionaries">Select dictionaries</string>
    <string name="select_part_of_speech">Select part of speech</string>
    <string name="pos_empty">Empty</string>
    <string name="pos_noun">Noun</string>
    <string name="pos_verb">Verb</string>
    <string name="pos_adjective">Adjective</string>
    <string name="pos_adverb">Adverb</string>
    <string name="pos_other">Other</string>
    <string name="part_of_speech">Part of speech</string>
    <string name="add_example">Add example</string>
    <string name="usage_examples">Usage examples</string>
    <string name="usage_example_title">Example %1$d</string>
    <string name="hint_example_translation">Example translation...</string>
    <string name="hint_example_text">Example text...</string>
    <string name="learn">Learn</string>
    <string name="translations">Translations</string>
    <string name="edit_word">Edit word</string>
</resources>