<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".presentation.libraryScreen.chooseAddAction.ChooseAddActionBottomSheetFragment">

    <TextView
        android:id="@+id/textView18"
        style="@style/text.title.large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_something"
        app:layout_constraintBottom_toBottomOf="@+id/btn_close_sheet_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_close_sheet_add"
        android:contentDescription="@string/close_bottom_sheet"
        style="@style/WordloomIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="10dp"
        android:id="@+id/btn_word_add"
        style="@style/WordloomIcon.Big"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_word_add_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_dictionary_add"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/word"
        app:layout_constraintEnd_toEndOf="@+id/btn_word_add"
        app:layout_constraintStart_toStartOf="@+id/btn_word_add"
        app:layout_constraintTop_toBottomOf="@+id/btn_word_add" />

    <Button
        android:layout_marginHorizontal="10dp"
        android:id="@+id/btn_dictionary_add"
        style="@style/WordloomIcon.Big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_dictionary_add_24"
        app:layout_constraintBottom_toBottomOf="@+id/btn_word_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_word_add"
        app:layout_constraintTop_toTopOf="@+id/btn_word_add" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dictionary"
        app:layout_constraintEnd_toEndOf="@+id/btn_dictionary_add"
        app:layout_constraintStart_toStartOf="@+id/btn_dictionary_add"
        app:layout_constraintTop_toBottomOf="@+id/btn_dictionary_add" />
</androidx.constraintlayout.widget.ConstraintLayout>