<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.createDictionaryScreen.CreateDictionaryFragment">

    <com.google.android.material.appbar.AppBarLayout

        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back_24"
            app:title="Edit dictionary"
            style="@style/WordloomToolbar"
            app:menu="@menu/toolbar_save_menu"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_margin="12dp"
        android:id="@+id/textInputLayout"
        style="@style/WordloomTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dictionary_name"
        app:endIconDrawable="@drawable/ic_add_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_dict_name"
            style="@style/WordloomTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="asd" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_marginTop="24dp"
        android:layout_marginStart="12dp"
        style="@style/text.title.small"
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/WordloomExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="12dp"
        android:hint="@string/word"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:layout_constraintEnd_toStartOf="@id/btn_swap"
        android:labelFor="@id/autocomplete_dict_word_language">

        <AutoCompleteTextView
            android:id="@+id/autocomplete_dict_word_language"
            style="@style/WordloomAutocompleteTextView"
            tools:text="English"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_swap"
        style="@style/WordloomIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        app:icon="@drawable/ic_swap_horiz_24"
        android:contentDescription="@string/swap_options"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout2"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout2"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toStartOf="@id/textInputLayout3"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        style="@style/WordloomExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_marginEnd="12dp"
        android:layout_height="wrap_content"
        android:hint="@string/meaning"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_swap"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout2">

        <AutoCompleteTextView
            android:id="@+id/autocomplete_dict_meaning_language"
            style="@style/WordloomAutocompleteTextView"
            tools:text="Russian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>