<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:elevation="1dp"
    android:orientation="vertical"
    tools:context=".presentation.homeScreen.sessionSettings.SessionModeLearningFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/container_lvl0"
        android:paddingVertical="16dp"

        android:elevation="1dp">

        <TextView
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:id="@+id/textView16"
            style="@style/text.title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word_limit_per_session"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider"
            android:layout_marginStart="2dp"
            style="@style/WordloomSlider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:valueFrom="10"
            android:valueTo="100"
            app:layout_constraintEnd_toStartOf="@+id/edit_text_word_limit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <EditText
            android:layout_marginEnd="16dp"
            android:id="@+id/edit_text_word_limit"
            android:textAlignment="center"
            android:minWidth="40dp"
            android:maxWidth="80dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            style="@style/text.title.small"
            app:layout_constraintBottom_toBottomOf="@+id/slider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/slider" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/word_limit_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical= "8dp"
        tools:text="@string/word_limit_hint_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slider" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/container_lvl0"
            android:padding="16dp"
            android:elevation="1dp">

            <TextView
                android:layout_marginTop="12dp"
                android:id="@+id/textView10"
                style="@style/text.title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/available_words"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/to_repeat_circle"
                android:layout_margin="6dp"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:background="@drawable/circle_shape"
                android:backgroundTint="@color/learning_status"
                app:layout_constraintBottom_toBottomOf="@+id/textView12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView12" />

            <TextView
                android:id="@+id/textView12"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/to_repeat"
                app:layout_constraintStart_toEndOf="@id/to_repeat_circle"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/tv_to_repeat_count_available"
                style="@style/text.title.small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView12"
                tools:text="12" />

            <View
                android:id="@+id/to_learn_circle"
                android:layout_margin="6dp"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:background="@drawable/circle_shape"
                android:backgroundTint="@color/readyToLearn_status"
                app:layout_constraintBottom_toBottomOf="@+id/textView13"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView13" />

            <TextView
                android:id="@+id/textView13"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/to_learn"
                app:layout_constraintStart_toEndOf="@id/to_learn_circle"
                app:layout_constraintTop_toBottomOf="@id/textView12" />

            <TextView
                android:id="@+id/tv_to_learn_count_available"
                style="@style/text.title.small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView13"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView13"
                tools:text="1223" />

            <TextView
                android:id="@+id/textView14"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/total"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView13" />

            <TextView
                android:id="@+id/tv_total_count_available"
                style="@style/text.title.small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/textView14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView14"
                tools:text="1235" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/btn_manage_cards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView14">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_list_manage_24"
                    app:tint="@color/readyToLearn_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    style="@style/text"
                    android:textColor="@color/readyToLearn_text"
                    android:text="@string/manage_cards"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.divider.MaterialDivider
                    android:background="@color/background"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/textView8"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/btn_auto_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_manage_cards">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_autorenew_24"
                    app:tint="@color/readyToLearn_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView

                    android:id="@+id/textView9"
                    style="@style/text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/automatically_add_cards"
                    android:textColor="@color/readyToLearn_text"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>
